replaced textInputLayouts with TextViews for where user is not actually inputting text, ie. product, destination and repeat interval fields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,11 +197,11 @@
     <!-- Contracts page -->
     <string name="contracts_title">Contracts</string>
     <string name="contracts_empty">No contracts to show</string>
-    <string name="contracts_input_destination">Destination</string>
+    <string name="contracts_input_destination">Add destination</string>
     <string name="contracts_select_destination_title">Select destination</string>
     <string name="contracts_input_repeat_interval">Repeat</string>
     <string name="contracts_input_repeat_on">On…</string>
-    <string name="contracts_input_product">Product</string>
+    <string name="contracts_input_product">Add product</string>
     <string name="contracts_select_product_title">Select product</string>
     <string name="contracts_input_quantity_kg">Quantity (kg)</string>
     <string name="contracts_input_quantity_lbs">Quantity (lbs)</string>
