--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,7 @@
 
     <string name="location_delete_success">Location deleted successfully</string>
     <string name="location_delete_error">Cannot delete location</string>
+    <string name="location_undo_delete_error">Cannot undo action</string>
 
     <!-- Orders page -->
     <string name="orders_title">Orders</string>
